Add refresh token support
