# pkg/handler/auth.go
@@ -49,6 +49,10 @@ type signInInput struct {
 	Password string `json:"password" binding:"required"`
 }
 
+type refreshTokensInput struct {
+	RefreshTooken string `json:"refresh_token" binding:"required"`
+}
+
 // @Summary SignIn
 // @Tags auth
 // @Description login
@@ -56,7 +60,7 @@ type signInInput struct {
 // @Accept  json
 // @Produce  json
 // @Param input body signInInput true "credentials"
-// @Success 200 {string} string "token"
+// @Success 200 {object} tokensResponse
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
@@ -69,12 +73,57 @@ func (h *Handler) signIn(c *gin.Context) {
 		return
 	}
 
-	token, err := h.services.Authorization.GenerateToken(input.Username, input.Password)
+	userId, token, err := h.services.Authorization.GenerateAccessToken(input.Username, input.Password)
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
+
+	refreshToken, err := h.services.Authorization.GenerateRefreshToken(userId)
+	if err != nil {
+		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, tokensResponse{
+		Token:        token,
+		RefreshToken: refreshToken,
+	})
+}
+
+// @Summary Refresh tokens
+// @Tags auth
+// @Description Generate new refresh and access tokens
+// @ID refresh
+// @Accept  json
+// @Produce  json
+// @Param input body refreshTokensInput true "refresh token"
+// @Success 200 {object} tokensResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /auth/refresh [post]
+func (h *Handler) refreshTokens(c *gin.Context) {
+	var input refreshTokensInput
+	if err := c.BindJSON(&input); err != nil {
+		newErrorResponse(c, http.StatusBadRequest, "invalid input body")
+		return
+	}
+
+	userId, newRefreshToken, err := h.services.UpdateRefreshToken(input.RefreshTooken)
+	if err != nil {
+		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	newAccessToken, err := h.services.UpdateAccessToken(userId)
+	if err != nil {
+		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
 	c.JSON(http.StatusOK, map[string]interface{}{
-		"token": token,
+		"token":         newAccessToken,
+		"refresh_token": newRefreshToken,
 	})
 }
