# pkg/handler/response.go
@@ -17,6 +17,11 @@ type idResponse struct {
 	ID int `json:"id"`
 }
 
+type tokensResponse struct {
+	Token        string `json:"token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
 func newErrorResponse(c *gin.Context, statusCode int, message string) {
 	logrus.Error(message)
 	c.AbortWithStatusJSON(statusCode, errorResponse{message})
